API -  PROFILE  flow - NEW
update distance preference API
